Integracion landing de centros medicos con SEO HEAD

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#144A7B" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="IMAGECLEC - Conectando Centros de Salud con Ecografistas. Plataforma que facilita la conexión entre profesionales de imagenología y centros médicos."
     />
+    <meta name="keywords" content="centros de salud, ecografistas, imagenología, servicios médicos, gestión médica, ecografías, diagnóstico por imagen, implementación servicios de ecografía, ecografo portatil" />
+    <meta name="author" content="IMAGECLEC" />
+    <meta name="robots" content="index, follow" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://imageclec.com/" />
+    <meta property="og:title" content="IMAGECLEC - Conectando Centros de Salud con Ecografistas" />
+    <meta property="og:description" content="Plataforma que facilita la conexión entre profesionales de imagenología y centros médicos." />
+    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://imageclec.com/" />
+    <meta property="twitter:title" content="IMAGECLEC - Conectando Centros de Salud con Ecografistas" />
+    <meta property="twitter:description" content="Plataforma que facilita la conexión entre profesionales de imagenología y centros médicos." />
+    <meta property="twitter:image" content="%PUBLIC_URL%/logo.png" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="canonical" href="https://imageclec.com/" />
+    
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -25,10 +45,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-    <title>Imageclec</title>
+    <title>IMAGECLEC - Conectando Centros de Salud con Ecografistas</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Necesitas habilitar JavaScript para ejecutar esta aplicación.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
